# IT-Attendance-login

./: .gitignore  README.md
.github/workflows/: deploy.yml
.wrangler/cache/: wrangler-account.json
backend/: app.py  models.py  requirements.txt
backend-worker/: .gitignore  deploy_log.txt  main_test.py  pyproject.toml  schemas.py  wrangler.jsonc  wrangler.toml
backend-worker/routes/: attendance.py  auth.py  employees.py
backend-worker/src/: dependencies.py  main.py  models.py
backend-worker/src/routes/: __init__.py
backend/instance/: database.db  database1.db
backend/routes/: attendance.py  auth.py  employees.py
frontend/: package-lock.json  wrangler.toml
frontend/functions/api/: [[route]].js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AttendanceForm.jsx  AttendanceTable.jsx  Dashboard.jsx  EmployeeCheckIn.jsx  EmployeeHistory.jsx  LoginPage.jsx  ManageEmployees.jsx  Navbar.jsx
worker/: package.json  schema.sql  wrangler.toml
worker/src/: index.js
